[package]
name = "meteora-lp-sprinter"
version = "0.1.0"
edition = "2021"
authors = ["Kernlog <0xkernlog@gmail.com>"]
description = "A bot for providing liquidity to Solana liquidity pools on Meteora DAMM v2"
readme = "README.md"
license = "MIT"

[dependencies]
# Solana ecosystem
solana-client = "1.17.0"
solana-sdk = "1.17.0"
solana-transaction-status = "1.17.0"
solana-program = "1.17.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0" 

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"], default-features = false }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
dotenv = "0.15"
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

# Optional for Telegram monitoring
teloxide = { version = "0.12", optional = true }

[features]
default = []
telegram = ["teloxide"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1