[package]
name = "meteora-lp-sprinter"
version = "0.1.0"
edition = "2021"
authors = ["Kernlog <0xkernlog@gmail.com>"]
description = "A bot for providing liquidity to Solana liquidity pools on Meteora DAMM v2"
readme = "README.md"
license = "MIT"

[dependencies]
# Solana ecosystem
solana-client = "1.17.0"
solana-sdk = "1.17.0"
solana-transaction-status = "1.17.0"
solana-program = "1.17.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0" 

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5.7"

# Logging
log = "0.4"
env_logger = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"], default-features = false }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
dotenv = "0.15"
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.9.5"
async-trait = "0.1.73"
fastrand = "2.3.0"
base64 = "0.22.1"
bs58 = "0.5.0"

# Optional for Telegram monitoring
teloxide = { version = "0.12", features = ["macros", "auto-send"], optional = true }
tdlib = { version = "0.8", optional = true }
tdlib-sys = { version = "0.2", optional = true }
tdlib-types = { version = "0.1", optional = true }

[features]
default = []
telegram = ["teloxide", "tdlib", "tdlib-sys", "tdlib-types"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
